@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7039: Fixed distutils.tests.test_sysconfig when running on
+  installation with no build.
 
 What's New in Python 2.6.3
 ==========================
